add calculation and display of mean score for students

--- a/student_analysis.ipynb
+++ b/student_analysis.ipynb
@@ -186,6 +186,36 @@
     "# Display the first few rows of the dataset\n",
     "data.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74f850f7",
+   "metadata": {},
+   "source": [
+    "## Question 1: Calculate and display the mean (average) score for all students"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "b2c99384",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Score: 70.23\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate the mean score\n",
+    "mean_score = data['Score'].mean()\n",
+    "\n",
+    "# Display the mean score\n",
+    "print(f\"Mean Score: {mean_score:.2f}\")"
+   ]
   }
  ],
  "metadata": {
