add functionality to identify and display the highest score and the corresponding student's name

--- a/student_analysis.ipynb
+++ b/student_analysis.ipynb
@@ -216,6 +216,40 @@
     "# Display the mean score\n",
     "print(f\"Mean Score: {mean_score:.2f}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "789c245f",
+   "metadata": {},
+   "source": [
+    "## Question 2: Identify and print the highest score and the name of the student who achieved it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "7b4885a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Highest Score: 100, Name: Andrew Ellis\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find the row with the highest score\n",
+    "highest_score_row = data.loc[data['Score'].idxmax()]\n",
+    "\n",
+    "# Extract the score and name of the student\n",
+    "highest_score = highest_score_row['Score']\n",
+    "highest_score_name = highest_score_row['Name']\n",
+    "\n",
+    "# Display the highest score and student's name\n",
+    "print(f\"Highest Score: {highest_score}, Name: {highest_score_name}\")"
+   ]
   }
  ],
  "metadata": {
