add functionality to count and display the total number of students in the dataset

--- a/student_analysis.ipynb
+++ b/student_analysis.ipynb
@@ -250,6 +250,36 @@
     "# Display the highest score and student's name\n",
     "print(f\"Highest Score: {highest_score}, Name: {highest_score_name}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6bfc99e",
+   "metadata": {},
+   "source": [
+    "## Question 3: Count the total number of students in the dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4b187b2f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total Students: 100\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Count the unique student IDs\n",
+    "total_students = data['Student_ID'].nunique()\n",
+    "\n",
+    "# Display the total number of students\n",
+    "print(f\"Total Students: {total_students}\")"
+   ]
   }
  ],
  "metadata": {
