add functionality to group students by subject and calculate mean scores per subject

--- a/student_analysis.ipynb
+++ b/student_analysis.ipynb
@@ -280,6 +280,44 @@
     "# Display the total number of students\n",
     "print(f\"Total Students: {total_students}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b1bfd64",
+   "metadata": {},
+   "source": [
+    "## Qestion 4: Group the students by Subject and calculate the mean score per subject"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b3d39f53",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Scores Per Subject:\n",
+      "Subject\n",
+      "Computer Science    67.235294\n",
+      "English             65.117647\n",
+      "History             73.958333\n",
+      "Mathematics         75.944444\n",
+      "Science             67.958333\n",
+      "Name: Score, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Group data by subject and calculate mean scores\n",
+    "mean_scores_per_subject = data.groupby('Subject')['Score'].mean()\n",
+    "\n",
+    "# Display mean scores per subject\n",
+    "print(\"Mean Scores Per Subject:\")\n",
+    "print(mean_scores_per_subject)"
+   ]
   }
  ],
  "metadata": {
