add functionality to identify students who scored below average and suggest improvements

--- a/student_analysis.ipynb
+++ b/student_analysis.ipynb
@@ -354,6 +354,93 @@
     "plt.grid(axis='y', linestyle='--', alpha=0.7)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5735346",
+   "metadata": {},
+   "source": [
+    "## Question 6: Identify students who scored below the average and suggest improvements"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "59585a58",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Students Below Average:\n",
+      "                    Name  Score\n",
+      "1          Shannon Davis     70\n",
+      "2           Brent Pineda     63\n",
+      "4            Gina Potter     59\n",
+      "6           Patrick Wang     67\n",
+      "7            Brian Joyce     52\n",
+      "8             Jacob Hunt     55\n",
+      "9       Joseph Armstrong     51\n",
+      "14             Glen Luna     70\n",
+      "15           Chad Foster     42\n",
+      "16          Steven Frank     50\n",
+      "18        Donald Anthony     51\n",
+      "21         Deborah Sharp     47\n",
+      "24       Brittany Church     67\n",
+      "25             Ryan Leon     41\n",
+      "30          Austin Owens     66\n",
+      "31         Ronald Powers     44\n",
+      "34  Mrs. Erica Olson DVM     41\n",
+      "35         Ruben Jackson     62\n",
+      "36         Karen Edwards     53\n",
+      "37           Mark Wilson     53\n",
+      "38        Clayton Glover     61\n",
+      "40        Daniel Kennedy     45\n",
+      "43     Christina Vazquez     59\n",
+      "45           Diana Craig     62\n",
+      "46       Stephen Shields     40\n",
+      "48        Lisa Dickerson     42\n",
+      "49          Nicole Smith     55\n",
+      "51      Thomas Hendricks     55\n",
+      "52          Kiara Lowery     55\n",
+      "54            Louis Todd     57\n",
+      "56       Michael Douglas     53\n",
+      "57         Terry Johnson     48\n",
+      "58          Ronald Mejia     57\n",
+      "60          Carla Juarez     59\n",
+      "61        Barbara Castro     47\n",
+      "62           Donna Brown     67\n",
+      "68          John Aguilar     60\n",
+      "70          Stacey Moore     60\n",
+      "72           Andrew Ward     48\n",
+      "73          Susan Foster     60\n",
+      "74     Jonathan Campbell     65\n",
+      "75       Justin Williams     59\n",
+      "76         Theodore Odom     41\n",
+      "77            Emily Buck     43\n",
+      "82       Brandi Gonzalez     41\n",
+      "85         Elizabeth Roy     46\n",
+      "89          John Hammond     64\n",
+      "91     Michael Rodriguez     59\n",
+      "95     Ronald Benson DDS     69\n",
+      "96         Christy Jones     67\n",
+      "97             Chad Hart     53\n",
+      "Improvement Suggestion: Offer personalized tutoring sessions focusing on identified weak subjects.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Filter students who scored below the average\n",
+    "below_average = data[data['Score'] < mean_score][['Name', 'Score']]\n",
+    "\n",
+    "# Display the list of students below average\n",
+    "print(\"Students Below Average:\")\n",
+    "print(below_average)\n",
+    "\n",
+    "# Suggest an improvement\n",
+    "print(\"Improvement Suggestion: Offer personalized tutoring sessions focusing on identified weak subjects.\")"
+   ]
   }
  ],
  "metadata": {
